fixing gradle android

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,9 @@ yarn-error.*
 app-example
 
 # generated native folders
-/ios
-/android
+# Android build
+/android/.gradle/
+/android/app/build/
+/android/build/
+/android/local.properties
+
